--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,5 +6,6 @@ includes:
 	- vendor/spaze/phpstan-disallowed-calls/disallowed-execution-calls.neon
 
 parameters:
+	checkMissingIterableValueType: false
 	ignoreErrors:
 		- '#Call to an undefined method SoapClient::.+\(\).#'
