--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,14 @@
 		}
 	],
 	"require": {
-		"php": ">=7.4.0",
+		"php": "^7.4 || ^8.0",
 		"tecnickcom/tcpdf": "^6.3",
 		"spatie/array-to-xml": "^2.15"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^0.12.18",
-		"tracy/tracy": "^2.7",
-		"phpstan/phpstan-nette": "^0.12.6",
+		"phpstan/phpstan": "^0.12.74",
+		"tracy/tracy": "^2.8",
+		"phpstan/phpstan-nette": "^0.12.14",
 		"spaze/phpstan-disallowed-calls": "^1.1",
 		"roave/security-advisories": "dev-master"
 	},
