--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		}
 	],
 	"require": {
-		"php": "^7.4 || ^8.0",
+		"php": "^8.0",
 		"tecnickcom/tcpdf": "^6.3",
 		"spatie/array-to-xml": "^2.15"
 	},
